# personal-ai-employee

./: .gitignore  BRONZE_TIER_COMPLETE.md  GMAIL_SETUP.md  LESSONS_LEARNED.md  README.md  auth_setup.py  debug_test.py  main.py  pyproject.toml  requirements.txt  setup.py  setup_gmail_auth.py  test_bronze_implementation.py  verify_setup.py  watchdog.py
.specify/memory/: constitution.md
AI_Employee_Vault/: Bank_Transactions.md  Business_Goals.md  Company_Handbook.md  Dashboard.md
AI_Employee_Vault/.obsidian/: workspace.json
AI_Employee_Vault/Inbox/: competitor_research.md  gold_tier_test.md
AI_Employee_Vault/Plans/: plan_.gitkeep.md  plan_acme_invoice.md  plan_email_1772699195_"TAAFT - There's An AI For That" <hi.md  plan_email_1772699195_Matt Palmer <matt.md  plan_email_1772699196_"It's Josh from The Nerd Nook" <thenerdnook+3-randoms.md  plan_email_1772699196_Glassdoor Jobs <noreply.md  plan_email_1772699197_"daily.dev" <informer.md  plan_email_1772699197_Anthropic Education <education-support.md  plan_email_1772699198_"Sapience Institute | Sapience Academy" <info.md  plan_email_1772699198_LinkedIn <messages-noreply.md  plan_email_1772699198_noreply.md  plan_email_1772699199_"TAAFT - There's An AI For That" <hi.md  plan_email_1772699266_"TAAFT - There's An AI For That" <hi.md  plan_email_1772699266_Matt Palmer <matt.md  plan_email_1772699267_Glassdoor Jobs <noreply.md  plan_email_1772699268_"It's Josh from The Nerd Nook" <thenerdnook+3-randoms.md  plan_email_1772699269_"daily.dev" <informer.md  plan_email_1772699270_noreply.md  (+301 more)
src/: __init__.py  orchestrator.py
(+64 files in other folders)
