[project]
name = "personal-ai-employee"
version = "0.1.0"
description = "A local-first autonomous digital employee using a vault-based architecture with Claude Code reasoning engine"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [
    { name = "Developer", email = "developer@example.com" }
]
dependencies = [
    "watchdog>=4.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "playwright>=1.40.0",
    "pydantic>=2.5.0",
    "structlog>=24.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
